--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -39,6 +39,7 @@
                     android:text="Title: " />
 
                 <EditText
+                    android:id="@+id/titletext"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:hint="Bermuda" />
@@ -54,6 +55,7 @@
                     android:text="Price: " />
 
                 <EditText
+                    android:id="@+id/pricetext"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:hint="0.0" />
