--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -52,14 +52,50 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:text="Price: " />
+                    android:text="Hotel:" />
 
                 <EditText
-                    android:id="@+id/pricetext"
+                    android:id="@+id/hotelText"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:hint="0.0" />
+                    android:hint="Jane Resorts" />
             </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:text="Start Date:" />
+
+                <EditText
+                    android:id="@+id/startDateText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:hint="01/23/24" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:text="End Date:" />
+
+                <EditText
+                    android:id="@+id/endDateText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:hint="01/28/24" />
+            </LinearLayout>
+
+
 
 
 
