Finished part B3f. I skipped over it. Now it's completed.

--- a/app/src/main/res/menu/menu_productdetails.xml
+++ b/app/src/main/res/menu/menu_productdetails.xml
@@ -11,4 +11,8 @@
     <item android:title="Set Alert"
         android:id="@+id/setAlert"
         />
+
+    <item android:title="Share"
+        android:id="@+id/shareVacation"
+        />
 </menu>
