--- a/app/src/main/res/menu/menu_partdetails.xml
+++ b/app/src/main/res/menu/menu_partdetails.xml
@@ -7,7 +7,7 @@
     <item android:title="Share Note"
         android:orderInCategory="100"
         android:id="@+id/share"/>
-    <item android:title="Notify"
+    <item android:title="Set Alert"
         android:orderInCategory="100"
         android:id="@+id/notify"/>
 </menu>
