Revised minor parts B5b and b3f. Also fixed Vacation not populating on with the correct excursion on Excursion Details screen.

--- a/app/src/main/res/menu/menu_partdetails.xml
+++ b/app/src/main/res/menu/menu_partdetails.xml
@@ -4,6 +4,9 @@
 
     <item android:title="Save Part"
         android:id="@+id/partsave"/>
+    <item android:title="Delete Part"
+        android:orderInCategory="100"
+        android:id="@+id/partDelete"/>
     <item android:title="Set Alert"
         android:orderInCategory="100"
         android:id="@+id/notify"/>
